--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Country App</title>
     <style>
       #searchDiv {
         max-height: 200px;
@@ -22,7 +22,7 @@
       }
     </style>
   </head>
-  <body>
+  <body  oncontextmenu="return false;">
     <div class="container">
       <input
         type="search"
